--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svg2pdf.js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A javascript-only SVG to PDF conversion utility that runs in the browser leveraging jsPDF",
   "main": "src/svg2pdf.js",
   "files": [
@@ -11,9 +11,10 @@
   ],
   "scripts": {
     "browserify:svgpath": "browserify node_modules/svgpath/index.js -s SvgPath -o src/SvgPath.js",
-    "browserify": "browserify src/svg2pdf.js -s svg2pdf -o dist/svg2pdf.js",
-    "uglify:dist": "uglifyjs -m -c -o dist/svg2pdf.min.js dist/svg2pdf.js",
-    "build": "npm run browserify && npm run uglify:dist",
+    "browserify": "browserify src/svg2pdf.js --debug -p licensify -s svg2pdf -o dist/svg2pdf.js",
+    "exorcist:svg2pdf" : "browserify src/svg2pdf.js --debug -p licensify -s svg2pdf | exorcist dist/svg2pdf.js.map > dist/svg2pdf.js",
+    "uglify:dist": "uglifyjs -m -c --source-map dist/svg2pdf.min.js.map --in-source-map dist/svg2pdf.js.map --source-map-url svg2pdf.min.js.map --comments /@license/ -o dist/svg2pdf.min.js dist/svg2pdf.js",
+    "build": "npm run browserify && npm run exorcist:svg2pdf && npm run uglify:dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "browserify": "^13.1.1",
+    "exorcist": "^0.4.0",
     "jspdf-yworks": "^1.2.68",
     "requirejs": "^2.3.2",
     "svgpath": "^2.2.0",
