--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "homepage": "https://github.com/yWorks/svg2pdf.js#readme",
   "dependencies": {
-    "jspdf-yworks": "^1.2.68"
+    "jspdf-yworks": "^1.2.68",
+    "licensify": "^3.1.3"
   },
   "devDependencies": {
     "browserify": "^13.1.1",
