--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "browserify": "^16.2.2",
     "cssesc": "^2.0.0",
     "exorcist": "^1.0.1",
-    "font-family": "^0.2.0",
+    "font-family-papandreou": "^0.2.0-patch1",
     "jasmine": "^3.2.0",
     "karma": "^3.0.0",
     "karma-babel-preprocessor": "^7.0.0",
