--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "browserify": "^16.2.2",
+    "chalk": "^2.4.2",
     "cssesc": "^2.0.0",
     "exorcist": "^1.0.1",
     "font-family-papandreou": "^0.2.0-patch1",
@@ -58,6 +59,7 @@
     "karma-jasmine": "^1.1.2",
     "karma-mocha-reporter": "^2.2.5",
     "licensify": "^3.1.3",
+    "log-utils": "^1.0.0",
     "requirejs": "^2.3.5",
     "svgpath": "^2.2.1",
     "uglify-js": "^3.4.7",
