--- a/package.json
+++ b/package.json
@@ -46,18 +46,20 @@
     "babel-preset-env": "^1.7.0",
     "browserify": "^16.2.3",
     "chalk": "^2.4.2",
+    "chai": "^4.2.0",
     "cssesc": "^3.0.0",
     "exorcist": "^1.0.1",
     "font-family-papandreou": "^0.2.0-patch1",
-    "jasmine": "^3.4.0",
     "karma": "^4.1.0",
     "karma-babel-preprocessor": "^7.0.0",
     "karma-browserify": "^6.0.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^2.0.1",
+    "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
+    "mocha": "^6.2.0",
     "licensify": "^3.1.3",
     "log-utils": "^1.0.0",
     "requirejs": "^2.3.6",
