--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "browserify": "^16.2.3",
-    "chalk": "^2.4.2",
     "chai": "^4.2.0",
+    "chalk": "^2.4.2",
+    "css": "^2.2.4",
     "cssesc": "^3.0.0",
     "exorcist": "^1.0.1",
     "font-family-papandreou": "^0.2.0-patch1",
