--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chai": "^4.2.0",
     "chalk": "^2.4.2",
     "css": "^2.2.4",
+    "css-select": "^2.0.2",
     "cssesc": "^3.0.0",
     "exorcist": "^1.0.1",
     "font-family-papandreou": "^0.2.0-patch1",
@@ -60,9 +61,9 @@
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "mocha": "^6.2.0",
     "licensify": "^3.1.3",
     "log-utils": "^1.0.0",
+    "mocha": "^6.2.0",
     "requirejs": "^2.3.6",
     "svgpath": "^2.2.2",
     "uglify-js": "^3.6.0",
