--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "browserify": "browserify src/svg2pdf.js --debug -p licensify -s svg2pdf -o dist/svg2pdf.js",
     "exorcist:svg2pdf": "browserify src/svg2pdf.js --debug -p licensify -s svg2pdf | exorcist dist/svg2pdf.js.map > dist/svg2pdf.js",
     "uglify:dist": "uglifyjs -m -c --source-map \"includeSources,content='dist/svg2pdf.js.map',url='svg2pdf.min.js.map' dist/svg2pdf.min.js.map\" --comments /@license/ -o dist/svg2pdf.min.js dist/svg2pdf.js",
-    "build": "yarpm run browserify && yarpm run exorcist:svg2pdf && yarpm run uglify:dist",
+    "production": "webpack --mode production",
+    "build": "webpack --mode development",
     "test": "karma start",
     "test:coverage": "yarpm run browserify && karma start --coverage",
-    "createreferences": "node tests/utils/reference-server.js"
+    "createreferences": "node tests/utils/reference-server.js",
+    "prettier": "prettier --write {src,tests,typings}/**/*.{ts,js} "
   },
   "repository": {
     "type": "git",
@@ -45,8 +47,8 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "browserify": "^16.2.3",
-    "chalk": "^2.4.2",
     "chai": "^4.2.0",
+    "chalk": "^2.4.2",
     "cssesc": "^3.0.0",
     "exorcist": "^1.0.1",
     "font-family-papandreou": "^0.2.0-patch1",
@@ -59,13 +61,18 @@
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "mocha": "^6.2.0",
     "licensify": "^3.1.3",
     "log-utils": "^1.0.0",
+    "mocha": "^6.2.0",
+    "prettier": "^1.18.2",
     "requirejs": "^2.3.6",
     "svgpath": "^2.2.2",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
     "uglify-js": "^3.6.0",
     "watchify": "^3.11.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
     "yarpm": "^0.2.1"
   }
 }
