--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   ],
   "scripts": {
     "browserify:svgpath": "browserify node_modules/svgpath/index.js -s SvgPath -o src/SvgPath.js",
-    "browserify": "browserify src/svg2pdf.js --debug -p licensify -s svg2pdf -o dist/svg2pdf.js",
+    "webpack": "yarpm run webpack",
     "exorcist:svg2pdf": "browserify src/svg2pdf.js --debug -p licensify -s svg2pdf | exorcist dist/svg2pdf.js.map > dist/svg2pdf.js",
     "uglify:dist": "uglifyjs -m -c --source-map \"includeSources,content='dist/svg2pdf.js.map',url='svg2pdf.min.js.map' dist/svg2pdf.min.js.map\" --comments /@license/ -o dist/svg2pdf.min.js dist/svg2pdf.js",
     "production": "webpack --mode production",
     "build": "webpack --mode development",
     "test": "karma start",
-    "test:coverage": "yarpm run browserify && karma start --coverage",
+    "test:coverage": "yarpm run webpack && karma start --coverage",
     "createreferences": "node tests/utils/reference-server.js",
     "prettier": "prettier --write {src,tests,typings}/**/*.{ts,js} "
   },
