--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "karma start",
     "test:coverage": "yarpm run webpack && karma start --coverage",
     "createreferences": "node tests/utils/reference-server.js",
-    "prettier": "prettier --write {src,tests,typings}/**/*.{ts,js} "
+    "prettier": "prettier --write {src,tests,typings}/**/*.{ts,js}",
+    "lint": "eslint {src,tests,typings}/**/*.{ts,js}"
   },
   "repository": {
     "type": "git",
@@ -46,12 +47,17 @@
     "tsc": "^1.20150623.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.9.0",
+    "@typescript-eslint/parser": "^2.9.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
     "chalk": "^2.4.2",
     "cssesc": "^3.0.0",
+    "eslint": "^6.7.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "exorcist": "^1.0.1",
     "font-family-papandreou": "^0.2.0-patch1",
     "karma": "^4.1.0",
@@ -67,7 +73,7 @@
     "licensify": "^3.1.3",
     "log-utils": "^1.0.0",
     "mocha": "^6.2.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "requirejs": "^2.3.6",
     "svgpath": "^2.2.2",
     "ts-loader": "^6.2.1",
