--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
   },
   "homepage": "https://github.com/yWorks/svg2pdf.js#readme",
   "dependencies": {
-    "jspdf-yworks": "^2.1.1",
-    "tsc": "^1.20150623.0"
+    "jspdf-yworks": "^2.1.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.9.0",
