make it a proper jsPDF plugin, proper jsPDF types, add types.d.ts file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "module": "es6",
     "target": "es5",
     "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
     "lib": [
       "dom",
       "es2015"
@@ -13,6 +15,7 @@
   "include": [
     "src/**/*.ts",
     "./node_modules/svgpath/index.d.ts",
-    "./typings/**/*.ts"
+    "./typings/**/*.ts",
+    "types.d.ts"
   ]
 }
