--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "src/svg2pdf.js",
     "dist/svg2pdf.js",
     "dist/svg2pdf.min.js",
+    "types.d.ts",
     "README.md"
   ],
+  "types": "types.d.ts",
   "scripts": {
     "browserify:svgpath": "browserify node_modules/svgpath/index.js -s SvgPath -o src/SvgPath.js",
     "browserify": "browserify src/svg2pdf.js --debug -p licensify -s svg2pdf -o dist/svg2pdf.js",
@@ -42,7 +44,7 @@
     "url": "https://github.com/yWorks/svg2pdf.js/issues"
   },
   "homepage": "https://github.com/yWorks/svg2pdf.js#readme",
-  "dependencies": {
+  "peerDependencies": {
     "jspdf-yworks": "^2.1.1"
   },
   "devDependencies": {
@@ -59,6 +61,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "exorcist": "^1.0.1",
     "font-family-papandreou": "^0.2.0-patch1",
+    "jspdf-yworks": "2.1.1",
     "karma": "^4.1.0",
     "karma-babel-preprocessor": "^7.0.0",
     "karma-browserify": "^6.0.0",
