--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
+    "strict": true,
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
@@ -15,7 +16,6 @@
   "include": [
     "src/**/*.ts",
     "./node_modules/svgpath/index.d.ts",
-    "./typings/**/*.ts",
-    "types.d.ts"
+    "./typings/**/*.ts"
   ]
 }
