--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "uglify:dist": "uglifyjs -m -c --source-map \"includeSources,content='dist/svg2pdf.js.map',url='svg2pdf.min.js.map' dist/svg2pdf.min.js.map\" --comments /@license/ -o dist/svg2pdf.min.js dist/svg2pdf.js",
     "build": "yarpm run browserify && yarpm run exorcist:svg2pdf && yarpm run uglify:dist",
     "test": "karma start",
+    "test:headless": "karma start --browsers ChromeHeadless --single-run",
     "test:coverage": "yarpm run browserify && karma start --coverage",
     "createreferences": "node tests/utils/reference-server.js"
   },
@@ -45,8 +46,8 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "browserify": "^16.2.3",
-    "chalk": "^2.4.2",
     "chai": "^4.2.0",
+    "chalk": "^2.4.2",
     "cssesc": "^3.0.0",
     "exorcist": "^1.0.1",
     "font-family-papandreou": "^0.2.0-patch1",
@@ -59,9 +60,10 @@
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "mocha": "^6.2.0",
     "licensify": "^3.1.3",
     "log-utils": "^1.0.0",
+    "mocha": "^6.2.0",
+    "puppeteer": "^2.1.1",
     "requirejs": "^2.3.6",
     "svgpath": "^2.2.2",
     "uglify-js": "^3.6.0",
