simplify build scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
     "strict": true,
     "noImplicitAny": true,
     "module": "es6",
@@ -8,15 +7,7 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "lib": [
-      "dom",
-      "es2015"
-    ]
+    "lib": ["dom", "es2015"]
   },
-  "include": [
-    "src/**/*.ts",
-    "./node_modules/svgpath/index.d.ts",
-    "./typings/**/*.ts",
-    "types.d.ts"
-  ]
+  "include": ["src/**/*.ts", "./node_modules/svgpath/index.d.ts", "./typings/**/*.ts", "types.d.ts"]
 }
