--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "svg2pdf.js",
   "version": "1.5.0",
   "description": "A javascript-only SVG to PDF conversion utility that runs in the browser leveraging jsPDF",
-  "main": "dist/svg2pdf.node.js",
-  "module": "dist/svg2pdf.esm.js",
+  "main": "dist/svg2pdf.node.min.js",
+  "module": "dist/svg2pdf.es.min.js",
+  "browser": "dist/svg2pdf.umd.min.js",
   "files": [
     "dist/**",
     "types.d.ts",
@@ -16,14 +17,14 @@
     "webpack": "webpack --mode development",
     "exorcist:svg2pdf": "browserify src/svg2pdf.js --debug -p licensify -s svg2pdf | exorcist dist/svg2pdf.js.map > dist/svg2pdf.js",
     "uglify:dist": "uglifyjs -m -c --source-map \"includeSources,content='dist/svg2pdf.js.map',url='svg2pdf.min.js.map' dist/svg2pdf.min.js.map\" --comments /@license/ -o dist/svg2pdf.min.js dist/svg2pdf.js",
-    "build": "rollup --config rollup.umd.config.js && rollup --config rollup.esm-node.config.js",
+    "build": "rollup -c rollup.config.js",
     "pretest": "yarpm run build",
     "test": "yarpm run test-unit && yarpm run test-globals && yarpm run test-amd && yarpm run test-cjs && yarpm run test-esm",
-    "test-unit": "karma start ./test/unit/karma.conf.js",
-    "test-globals": "karma start ./test/deployment/globals/karma.conf.js",
-    "test-amd": "karma start ./test/deployment/amd/karma.conf.js",
-    "test-cjs": "karma start ./test/deployment/cjs/karma.conf.js",
-    "test-esm": "karma start ./test/deployment/esm/karma.conf.js",
+    "test-unit": "karma start ./test/unit/karma.conf.js -single-run",
+    "test-globals": "karma start ./test/deployment/globals/karma.conf.js -single-run",
+    "test-amd": "karma start ./test/deployment/amd/karma.conf.js -single-run",
+    "test-cjs": "karma start ./test/deployment/cjs/karma.conf.js -single-run",
+    "test-esm": "karma start ./test/deployment/esm/karma.conf.js -single-run",
     "test:coverage": "yarpm run webpack && karma start --coverage",
     "createreferences": "node test/common/reference-server.js",
     "prettier": "prettier --write {src,tests,typings}/**/*.{ts,js}",
@@ -57,7 +58,7 @@
     "svgpath": "^2.2.2"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "^2.2.1",
+    "@rollup/plugin-typescript": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
     "babel-core": "^6.26.3",
@@ -85,11 +86,11 @@
     "mocha": "^6.2.0",
     "prettier": "^1.19.1",
     "requirejs": "^2.3.6",
-    "rollup": "^1.27.5",
+    "rollup": "^2.21.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-license": "^2.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-terser": "^6.1.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "uglify-js": "^3.6.0",
