make CI tests work, simplify karma configs, emit source maps for debugging with headless chrome

--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -11,5 +11,4 @@ jobs:
       with:
         node-version: '10.x'
     - run: npm install
-    - run: npm run test:headless
-  
+    - run: npm run test:ci
