--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "build": "rollup -c rollup.config.js",
     "pretest": "yarpm run build",
     "test": "yarpm run test-unit && yarpm run test-globals && yarpm run test-amd && yarpm run test-cjs && yarpm run test-esm",
-    "test-unit": "karma start ./test/unit/karma.conf.js -single-run",
-    "test-globals": "karma start ./test/deployment/globals/karma.conf.js -single-run",
-    "test-amd": "karma start ./test/deployment/amd/karma.conf.js -single-run",
-    "test-cjs": "karma start ./test/deployment/cjs/karma.conf.js -single-run",
-    "test-esm": "karma start ./test/deployment/esm/karma.conf.js -single-run",
-    "test:headless": "karma start --browsers ChromeHeadless --single-run",
+    "test-unit": "karma start ./test/unit/karma.conf.js",
+    "test-globals": "karma start ./test/deployment/globals/karma.conf.js",
+    "test-amd": "karma start ./test/deployment/amd/karma.conf.js",
+    "test-cjs": "karma start ./test/deployment/cjs/karma.conf.js",
+    "test-esm": "karma start ./test/deployment/esm/karma.conf.js",
+    "test-typescript": "karma start ./test/deployment/typescript/karma.conf.js",
+    "test:ci": "cross-env SHOW_DIFF=true npm run test",
     "test:coverage": "yarpm run webpack && karma start --coverage",
     "createreferences": "node test/common/reference-server.js",
     "prettier": "prettier --write {src,tests,typings}/**/*.{ts,js}",
@@ -70,6 +71,7 @@
     "eslint": "^6.7.1",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "cross-env": "^7.0.2",
     "cssesc": "^3.0.0",
     "exorcist": "^1.0.1",
     "font-family-papandreou": "^0.2.0-patch1",
