--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   "dependencies": {
     "cssesc": "^3.0.0",
     "font-family-papandreou": "^0.2.0-patch1",
-    "svgpath": "^2.3.0"
+    "svgpath": "^2.3.0",
+    "specificity": "^0.4.1"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^5.0.2",
