--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,11 @@
     "lib": ["dom", "es2015"],
     "sourceMap": true
   },
-  "include": ["src/**/*.ts", "./node_modules/svgpath/index.d.ts", "./typings/**/*.ts", "types.d.ts"]
+  "include": [
+    "src/**/*.ts",
+    "./node_modules/svgpath/index.d.ts",
+    "./node_modules/specificity/specificity.d.ts",
+    "./typings/**/*.ts",
+    "types.d.ts"
+  ]
 }
