let package.json browser field point to the modules variant

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A javascript-only SVG to PDF conversion utility that runs in the browser leveraging jsPDF",
   "main": "dist/svg2pdf.umd.min.js",
   "module": "dist/svg2pdf.es.min.js",
-  "browser": "dist/svg2pdf.umd.min.js",
+  "browser": "dist/svg2pdf.es.min.js",
   "files": [
     "dist/**",
     "types.d.ts",
