--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "browser": "dist/svg2pdf.es.min.js",
   "files": [
     "dist/**",
+    "src/**",
     "types.d.ts",
     "README.md",
     "LICENSE"
