--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -14,5 +14,6 @@ jobs:
     - run: npm run test:ci
     - uses: actions/upload-artifact@v3
       with:
+        if: failure()
         name: references
         path: test/specs/**/reference.pdf
