--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -12,8 +12,9 @@ jobs:
         node-version: '16.x'
     - run: npm install
     - run: npm run test:ci
-    - uses: actions/upload-artifact@v3
+    - name: Archive reference files
+      if: ${{ failure() }}
+      uses: actions/upload-artifact@v3
       with:
-        if: failure()
         name: references
         path: test/specs/**/reference.pdf
