fix inheritance of positional attributes (dx, dy) for nested tSpans (#266)
* fix inheritance of positional attributes (dx, dy) for nested tSpans

 - add inheritance mechanism
 - extend nested-tspans test case

fix #215

* archive reference files in CI tests when tests fail

--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -12,3 +12,9 @@ jobs:
         node-version: '16.x'
     - run: npm install
     - run: npm run test:ci
+    - name: Archive reference files
+      if: ${{ failure() }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: references
+        path: test/specs/**/reference.pdf
