upgrade rollup and rollup plugins, upgrade to latest typescript, update GitHub actions to use current node LTS

--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v1
       with:
-        node-version: '16.x'
+        node-version: 20
     - run: npm install
     - run: npm run test:ci
     - name: Archive reference files
