--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -1,4 +1,4 @@
-name: Continous Integration for svg2pdf.js
+name: Continuous Integration for svg2pdf.js
 
 on: [push, pull_request, workflow_dispatch]
 
@@ -6,15 +6,15 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
-        node-version: 20
+        node-version: 22
     - run: npm install
     - run: npm run test:ci
     - name: Archive reference files
       if: ${{ failure() }}
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: references
         path: test/specs/**/reference.pdf
