--- a/package.json
+++ b/package.json
@@ -48,32 +48,32 @@
   },
   "homepage": "https://github.com/yWorks/svg2pdf.js#readme",
   "peerDependencies": {
-    "jspdf": "^2.0.0"
+    "jspdf": "^3.0.0 || ^2.0.0"
   },
   "dependencies": {
     "cssesc": "^3.0.0",
     "font-family-papandreou": "^0.2.0-patch1",
-    "svgpath": "^2.3.0",
-    "specificity": "^0.4.1"
+    "specificity": "^0.4.1",
+    "svgpath": "^2.3.0"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^12.1.0",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "chai": "^4.2.0",
     "chalk": "^4.1.0",
     "concurrently": "^8.2.0",
+    "cross-env": "^7.0.2",
+    "cssesc": "^3.0.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "cross-env": "^7.0.2",
-    "cssesc": "^3.0.0",
     "exorcist": "^2.0.0",
     "font-family-papandreou": "^0.2.0-patch1",
-    "jspdf": "^2.4.0",
+    "jspdf": "^3.0.0",
     "karma": "^6.3.2",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -90,6 +90,6 @@
     "ts-loader": "^8.0.0",
     "typescript": "^5.6.2",
     "webpack": "^5.88.0",
-    "yarpm": "^0.2.1"
+    "yarpm": "^1.2.0"
   }
 }
