use "npm ci" instead of "npm install" in github actions

--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 22
-    - run: npm install
+    - run: npm ci
     - run: npm run test:ci
     - name: Archive reference files
       if: ${{ failure() }}
